[package]
name = "core_shell"
version = "0.3.0"
edition = "2021"

[package.metadata]
description = "A fast, POSIX-like shell written in Rust."
authors = ["takashialpha <takashialpha@protonmail.com>"]
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "env"] }
rustyline = "15.0.0"
shell-words = "1.1.0"
libc = "0.2.172"
ctrlc = "3.4.6"
lazy_static = "1.5.0"
atty = "0.2.14"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false
incremental = false
